[tool.poetry]
name = "python-kafka-sample"
version = "0.1.0"
description = ""
authors = ["so jungwoong <rkr638@never.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
